--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
+    <!-- font awesome cdn -->
+    <script
+      src="https://kit.fontawesome.com/1156b585b5.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>Search Country</title>
   </head>
   <body>
